# event_rl

./: LICENSE  README.md  dependencies.repos
src/jackal_helper/: CMakeLists.txt  package.xml
src/jackal_helper/src/: collision_publisher.cpp
src/jackal_helper/worlds/: custom.sdf  cylinderbox.sdf  cylinderboxperson.sdf  cylinderboxpersonchair.sdf  cylinderboxpersonchairtable.sdf  dynamicworld.sdf  staticblock.sdf
src/jackal_helper/worlds/plugins/: CMakeLists.txt  DynamicFemale.cc  DynamicMale.cc
src/scripts/: baseworld.sdf  generate_base_world.py  generate_dynamic_world.py  generate_world_box_cylinder.py  generate_world_box_cylinder_person.py  generate_world_box_cylinder_person_chair.py  generate_world_box_cylinder_person_chair_table.py
