<?xml version="1.0"?>
<package format="3">
  <name>jackal_helper</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Jackal helper</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>protobuf</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>Boost</exec_depend>
  <exec_depend>protobuf</exec_depend>
</package>
